--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "Opekktar.Online"
 
 +++
 
-{{< blocks/cover title="Welcome to Opekktar.Online" image_anchor="bottom" height="min" color="gray" >}}
+{{< blocks/cover title="Welcome to Opekktar.Online" image_anchor="bottom" height="full" color="gray" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/about" >}}">
 		About Opekktar Yggdrasil <i class="fas fa-arrow-alt-circle-right ml-2"></i>
